update css + layout view scrolling

--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -14,7 +14,7 @@
 
 $primary    : #EC268F
 $secondary  : #37b6f9 // #9c27b0  //#2979ff //#009688
-$accent     : #ffff00 // #37b6f9 //#ff1bd9// #555
+$accent     : #3494c0 // #37b6f9 //#ff1bd9// #555
 
 $neutral    : #E0E1E2
 $positive   : #21BA45
